# pim-simulator

./: .gitignore  04_upload_ablation_cycle_figure.csv  CMakeLists.txt  README.md  main.cpp
configs/: 12x10 cores_128x128_per_array_1024_arrays_per_core.cfg  12x10_cores_512x512_per_array_64_arrays_per_core.cfg  DMesh120x1_TileSize256_CramSize256x256.cfg  DMesh12x10_TileSize256_CramSize256x256.cfg  DMesh12x10_TileSize256_CramSize256x256_bus.cfg  DMesh12x10_TileSize256_CramSize256x256_constOpOff.cfg  DMesh12x10_TileSize256_CramSize256x256_constOpOff_kickoutRow.cfg  DMesh12x10_TileSize256_CramSize256x256_crossCramShiftOff.cfg  DMesh12x10_TileSize256_CramSize256x256_crossCramShiftOff_bypassDram.cfg  DMesh12x10_TileSize256_CramSize256x256_everythingOff.cfg  DMesh12x10_TileSize256_CramSize256x256_everythingOff_plusHtree.cfg  DMesh12x10_TileSize256_CramSize256x256_interCRAM.cfg  DMesh12x10_TileSize256_CramSize256x256_intraCRAM.cfg  DMesh12x10_TileSize256_CramSize256x256_oneToAllBroadcast.cfg  DMesh12x10_TileSize256_CramSize256x256_ring.cfg  DMesh12x10_TileSize256_CramSize256x256_shuffleOff.cfg  DMesh12x18_TileSize128_CramSize256x256.cfg  DMesh12x20_TileSize128_CramSize256x256.cfg  DMesh12x20_TileSize64_CramSize256x256.cfg  DMesh12x5_TileSize512_CramSize256x256.cfg  DMesh12x9_TileSize1024_CramSize128x128.cfg  DMesh12x9_TileSize64_CramSize512x512.cfg  DMesh24x5_TileSize256_CramSize256x256.cfg  DMesh27x4_TileSize256_CramSize256x256.cfg  DMesh4x4_TileSize256_CramSize256x256.cfg  DMesh4x4_TileSize256_CramSize256x256_ablation.cfg  DMesh6x20_TileSize256_CramSize256x256.cfg  DMesh9x5_TileSize256_CramSize256x256.cfg  SIMDRAM.cfg  Test_load.cfg  level_4_512_1_0_0.cfg  pimsim.cfg  pimsim_128tiles_used.cfg  pimsim_1tile_used.cfg  pimsim_4tiles_4used.cfg  pimsim_DMesh_128tiles.cfg  pimsim_DMesh_4tiles_4used.cfg  simdram_256x256x16.cfg  simdram_256x256x32.cfg  simdram_256x256x64.cfg  (+1 more)
include/backend/: Config.h  Controller.h  (+29 more)
params/: conv2d.param  conv2d_3x3.param  conv2d_7x7.param  conv2d_double.param  conv2d_half.param  gemv.param  resnet_conv5_1_2.param
pim_sim/: Config.cpp  Config.h  InterConnect.h  MemoryTile.cpp  MemoryTile.h  Memory_characteristics.cpp  Memory_characteristics.h  Request.h  System.cpp  System.h  main.cpp  system.h
scripts/: .gitignore
(+595 files in other folders)
